--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,98 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+ * H0M3ST3AD Project Main CSS Styles
+ * Author: Jeremy Mallette
+ * Date Last Updated: 10/12/2017
+ */
+
+
+/*  Imports
+------------------------------------------------------------------------------*/
+@import "./assets/css/navbar.css";
+@import "./assets/css/hp_table.css";
+@import "./assets/css/links.css";
+
+/*  Generic Styles
+------------------------------------------------------------------------------*/
+
+html {
+    min-width: 100%;
+    min-height: 100%;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    position: relative;
+    margin: 0;  /* Fixes bug... */
+    padding: 0; /* Somehow didn't inherit from all... */
+
+    background-color: #DCDCDC;
+}
+
+p, q {
+    margin: 10px;
+    padding: 10px;
+
+    color: #151515;
+    font-family: helvetica;
+}
+
+/*  Misc. Classes
+------------------------------------------------------------------------------*/
+
+.page_header {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.error_header {
+    display: block;
+    padding: 50px;
+
+    color: #DC143C;
+    font-family: Courier;
+}
+
+.content_body {
+    position: relative;
+    margin-top: 50px;
+}
+
+.title_header {
+    margin: 50px;
+    margin-top: 75px;
+    padding: 50px;
+    height: 50px;
+
+    color: #DC143C;
+    font-family: "Courier";
+    font-size: 5em;
+    font-style: italic; /* TODO : Maybe change? Design choice */
+    text-align: center;
+}
+
+/* Misc. Object
+------------------------------------------------------------------------------*/
+#silhouette {
+  object-fit: contain;
+}
+
+#particles-js {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -99;
+    width: 100%;
+    height: calc(100% - 500px);
+}
+
+#homestead_explanation {
+    padding: 30px 60px;
+    text-align: center;
+}
