Add frontend user registration

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,6 +1,9 @@
 <h1 class="title_header">Welcome to your new home</h1>
 
-<img id="silhouette" src="/assets/img/city_silhouette.png" alt="Img: Silhouette"/>
+<!--img id="silhouette" src="/assets/img/city_silhouette.png" alt="Img: Silhouette"/-->
+
+<button [routerLink]="['/register']">Register</button>
+<button [routerLink]="['/login']">Login</button>
 
 <!-- Explanation of "Homestead" -->
 <div>
