Navbar fixes and style updates

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,6 @@
-<div class="page_header">
-  <app-navbar></app-navbar>
-</div>
+<app-navbar></app-navbar>
 
-<div class="content_body">
+<div class="content-body">
   <flash-messages></flash-messages>
   <router-outlet></router-outlet>
 </div>
