--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<div id="particles-js"></div>
+<div id="particles"></div>
 
 <!-- Welcome Home Animation -->
 <div>
-  <h1 class="title_header" id="wh_header">
+  <h1 class="title" id="welcome-home">
     <noscript>
       Welcome Home.
     </noscript>
@@ -13,7 +13,7 @@
 
 <!-- Main Page Device Overview -->
 <div>
-  <table id="hp_table">
+  <table id="device-table">
     <tr>
       <th>Device ID</th>
       <th>Service</th>
@@ -31,7 +31,7 @@
 
 <!-- Explanation of "Homestead" -->
 <div>
-  <p id="homestead_explanation">
+  <p id="homestead-explanation">
   Self-sustainability, ingenuity, and the spirit of carving out one's stake
   are the values that inspired homesteading long ago. H0M3ST3AD was created
   with these very same ideals in mind. This platform allows the user to build
@@ -58,7 +58,7 @@
 
 <script src="/scripts/particles.js"></script>
 <script>
-  particlesJS.load("particles-js", "/config/particles.json", function() {
+  particlesJS.load("particles", "assets/config/particles.json", function() {
     Console.log("particles loaded successfully.");
   });
 </script>
