Implement logout; Add generic css classes; Make navbar non-selectable

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,6 +10,7 @@
 @import "./assets/css/navbar.css";
 @import "./assets/css/hp_table.css";
 @import "./assets/css/links.css";
+@import "./assets/css/generic-classes.css";
 
 /*  Generic Styles
 ------------------------------------------------------------------------------*/
