--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,33 +1,33 @@
 <!-- Navbar -->
 <div class="navbar">
-  <ul class="navbar-list-left">
+  <ul class="navbar-list-left selectDisable">
     <li class="navbar-button">
       <a [routerLink]="['/']">
-          <img src="/assets/img/house.png" alt="Image: house:"/>
+          <img class="selectDisable" src="/assets/img/house.png" alt="Image: house:"/>
       </a>
     </li>
     <li class="navbar-button">
       <a [routerLink]="['/']">
-        <h1 id="navbar-title">H0M35T3AD</h1>
+        <h1 class="selectDisable" id="navbar-title">H0M35T3AD</h1>
       </a>
     </li>
   </ul>
 
-  <ul class="navbar-list-right">
+  <ul class="navbar-list-right selectDisable">
     <li class="navbar-button">
       <a [routerLink]="['/profile']">
-        <img src="/assets/img/account.png" alt="Image: Profile"/>
+        <img class="selectDisable" src="/assets/img/account.png" alt="Image: Profile"/>
       </a>
     </li>
     <li class="navbar-button">
       <div class="navbar-dropdown">
         <a (click)="onSettingsClicked()">
-          <img class="navbar-dropdown-init" src="/assets/img/gear.png" alt="Image: settings"/>
+          <img class="navbar-dropdown-init selectDisable" src="/assets/img/gear.png" alt="Image: settings"/>
         </a>
         <div class="navbar-dropdown-content" id="settingsDropdown">
-          <button class="dropbutton" [routerLink]="['/settings/account']">Account Settings</button>
-          <button class="dropbutton" [routerLink]="['/settings/devices']">Device Settings</button>
-          <button class="dropbutton" (click)="onLogoutClicked()">Logout</button>
+          <button class="dropbutton selectDisable" [routerLink]="['/settings/account']">Account Settings</button>
+          <button class="dropbutton selectDisable" [routerLink]="['/settings/devices']">Device Settings</button>
+          <button class="dropbutton selectDisable" (click)="onLogoutClicked()">Logout</button>
         </div>
       </div>
     </li>
