--- a/frontend/src/assets/css/containers.css
+++ b/frontend/src/assets/css/containers.css
@@ -1,8 +1,6 @@
 .container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 16px;
-  padding-right: 16px;
+  margin: 16px auto;
+  padding: 16px;
   text-align: center;
   align-content: center;
 }
