--- a/frontend/src/assets/css/forms.css
+++ b/frontend/src/assets/css/forms.css
@@ -8,6 +8,16 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
+.register-form {
+    margin: 64px auto;
+    padding: 64px;
+    min-width: 300px;
+    width: 20%;
+
+    background-color: #F2F2F2;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
 .form-label {
     width: 200px;
     padding: 16px;
@@ -23,4 +33,13 @@
     color: #151515;
     font-family: helvetica;
     font-size: 1.2em;
+}
+
+.form-explanation {
+  margin: 0px;
+  padding: 0px;
+
+  color: #151515;
+  font-family: helvetica;
+  font-size: 0.75em;
 }
