--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -13,16 +13,26 @@
 
 <!-- Main Page Device Overview -->
 <div>
-  <table id="device-table">
+  <table class="dashboard-table">
     <tr>
-      <th>Device ID</th>
-      <th>Service</th>
-      <th>Status</th>
-      <th>Last Updated</th>
+      <th class="dashboard-table-header">Device ID</th>
+      <th class="dashboard-table-header">Service</th>
+      <th class="dashboard-table-header">IP Address</th>
+      <th class="dashboard-table-header">Status</th>
+      <th class="dashboard-table-header">Last Updated</th>
     </tr>
+    <tbody ng-repeat="x in devices">
+      <tr class="dashboard-table-row">
+        <td class="dashboard-table-cell">{{x.customId}}</td>
+        <td class="dashboard-table-cell">{{x.deviceService}}</td>
+        <td class="dashboard-table-cell">{{x.lastIpAddress}}</td>
+        <td class="dashboard-table-cell">{{x.lastStatusUpdate}}</td>
+        <td class="dashboard-table-cell">{{x.dateLastUpdated}}</td>
+      </tr>
+    </tbody>
     <!-- Note: Data rows filled dynamically by hp_table.js -->
     <noscript>
-      <td>Loading this table requires javascript</td>
+      <td class="dashboard-table-cell">Loading this table requires javascript</td>
     </noscript>
   </table>
 </div>
