--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,7 +8,7 @@
 /*  Imports
 ------------------------------------------------------------------------------*/
 @import "./assets/css/navbar.css";
-@import "./assets/css/hp_table.css";
+@import "./assets/css/dashboard-table.css";
 @import "./assets/css/forms.css";
 @import "./assets/css/containers.css";
 @import "./assets/css/buttons.css";
