--- a/frontend/src/assets/css/containers.css
+++ b/frontend/src/assets/css/containers.css
@@ -1,9 +1,13 @@
+/* Generic Containers --------------------------------------------------------*/
+
 .container {
   margin: 16px auto;
   padding: 16px;
   text-align: center;
   align-content: center;
 }
+
+/* Misc. Containers ----------------------------------------------------------*/
 
 .homepage-button-group {
     display: block;
@@ -20,4 +24,18 @@
     overflow: hidden;
 
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Collapsable Container -----------------------------------------------------*/
+
+.collapse-header {}
+
+.collapse-panel {
+    padding: 16px;
+    max-height: 0;
+    overflow: hidden;
+
+    background-color: #F2F2F2;
+
+    transition: max-height 0.2s ease-out;
 }
