--- a/frontend/src/assets/css/flash-messages.css
+++ b/frontend/src/assets/css/flash-messages.css
@@ -13,7 +13,7 @@
 
 .flash-message p {
     text-align: center;
-    font-family: helvetica;
+    font-family: "Montserrat", helvetica, sans-serif;
     font-size: 1em;
     color: #151515;
 }
