--- a/frontend/src/assets/css/generic-classes.css
+++ b/frontend/src/assets/css/generic-classes.css
@@ -1,3 +1,13 @@
+/**
+ * Generic Classes
+ *
+ * Generic classes with a focus on functional attributes rather than stylistic
+ * ones. These are to be added, toggled, etc. to perform a task
+ *
+ * @author Jeremy Mallette
+ * @version 1.0.0
+ */
+
 /* This class is toggled to display dropdown items */
 .show {
   display:block;
@@ -5,18 +15,18 @@
 
 /* This class disables the user highlight/select of an element */
 .selectDisable {
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none;
-    user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 /* This class enables the user highlight/select of an element */
 .selectEnable {
-    -webkit-user-select: text;
-    -khtml-user-select: text;
-    -moz-user-select: text;
-    -o-user-select: text;
-    user-select: text;
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -o-user-select: text;
+  user-select: text;
 }
