--- a/frontend/src/assets/css/forms.css
+++ b/frontend/src/assets/css/forms.css
@@ -1,38 +1,47 @@
-.login-form {
-    margin: 64px auto;
-    padding: 64px;
-    min-width: 300px;
-    width: 20%;
+/**
+ * Form Elements
+ *
+ * Styles and CSS Functionality for the form elements
+ *
+ * @author Jeremy Mallette
+ * @version 1.0.0
+ */
 
-    background-color: #F2F2F2;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+.login-form {
+  margin: 64px auto;
+  padding: 64px;
+  min-width: 300px;
+  width: 20%;
+
+  background-color: #F2F2F2;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .register-form {
-    margin: 64px auto;
-    padding: 64px;
-    min-width: 300px;
-    width: 20%;
+  margin: 64px auto;
+  padding: 64px;
+  min-width: 300px;
+  width: 20%;
 
-    background-color: #F2F2F2;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  background-color: #F2F2F2;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .form-label {
-    width: 200px;
-    padding: 16px;
+  width: 200px;
+  padding: 16px;
 
-    color: #151515;
-    font-family: "Montserrat", helvetica, sans-serif;
-    font-size: 1.2em;
+  color: #151515;
+  font-family: "Montserrat", helvetica, sans-serif;
+  font-size: 1.2em;
 }
 
 .form-textbox {
-    width: 250px;
+  width: 250px;
 
-    color: #151515;
-    font-family: "Montserrat", helvetica, sans-serif;
-    font-size: 1.2em;
+  color: #151515;
+  font-family: "Montserrat", helvetica, sans-serif;
+  font-size: 1.2em;
 }
 
 .form-explanation {
