--- a/frontend/src/assets/css/containers.css
+++ b/frontend/src/assets/css/containers.css
@@ -28,10 +28,12 @@
 .backdrop-img {
   display: block;
   width: 100%;
-  min-width: 350px;
   margin: 0 auto;
   overflow: hidden;
 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
