--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -18,6 +18,7 @@
 @import "./assets/css/links.css";
 @import "./assets/css/generic-classes.css";
 @import "./assets/css/flash-messages.css";
+@import "./assets/css/tooltips.css";
 @import "./assets/css/simple-animations.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300|Share+Tech+Mono');
 
@@ -26,7 +27,7 @@
 
 html {
   min-width: 100%;
-  min-height: 100%;
+  height: 100%;
 }
 
 * {
@@ -37,6 +38,7 @@ html {
 body {
   margin: 0;  /* Fixes bug... */
   padding: 0; /* Somehow didn't inherit from all... */
+  height: 100%;
 
   background-color: #DCDCDC;
 }
