Hide the navbar buttons when on open pages

--- a/frontend/src/assets/css/generic-classes.css
+++ b/frontend/src/assets/css/generic-classes.css
@@ -10,7 +10,11 @@
 
 /* This class is toggled to display dropdown items */
 .show {
-  display:block;
+  display: block;
+}
+
+.hide {
+  display: none;
 }
 
 /* This class disables the user highlight/select of an element */
