Complete about page; Organize TODO in README into effective backlog

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -1,3 +1,44 @@
-<p>
-  about works!
-</p>
+<div class="text-container" id="about-page">
+  <h2>The Project</h2>
+  <p>
+    The H0M3ST3AD Project is an on-going effort to make communication between
+    you and your wifi-based projects effortless. Keeping all projects at a
+    centralized place means you constantly have easy access to them. By keeping
+    key details about your devices like the IP address and the communication
+    protocols, the app can automatically fill in repetitive and uneccessary
+    details so that you don't have to.
+    <br><br>
+    For now, the key features are keeping all your projects in a simple
+    centralized location, diplaying this information in a condensed dashboard
+    table, and providing a direct communication terminal that autofills
+    repetitive information. In the future, we hope to support storing and
+    executing custom functions, as well as data logging.
+    <br><br>
+    <strong>Important Note:</strong>
+    Security is being constantly updated, but the application is has not reached
+    a production release. As such, if you decide to use our service, please
+    consider carefully the data that is transferred through this service.
+  </p>
+  <div class="about-vertical-container">
+    <h3>Github</h3>
+    <img class="selectDisable"
+         id="github-img"
+         src="/assets/img/github.png"
+         alt="Img-Email"/>
+    <p>
+      This project is open source and posted on Github. To access, collaborate,
+      or report bugs please click on the above image.
+    </p>
+  </div>
+  <div class="about-vertical-container right">
+    <h3>Email</h3>
+    <img class="selectDisable"
+         id="email-img"
+         src="/assets/img/email.png"
+         alt="Img-Email"/>
+    <p>
+      For direct communication, if absolutely necessary, the administrator can
+      be reached at <a href="mailto:jgomallette@gmail.com">this email</a>.
+    </p>
+  </div>
+</div>
