--- a/frontend/src/assets/css/containers.css
+++ b/frontend/src/assets/css/containers.css
@@ -16,6 +16,15 @@
   align-content: center;
 }
 
+.text-container {
+  width: 80%;
+  margin: 16px auto;
+  padding: 16px;
+
+  background-color: #F2F2F2;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
 /* Misc. Containers ----------------------------------------------------------*/
 
 .homepage-button-group {
@@ -35,6 +44,38 @@
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.about-vertical-container {
+  display: inline-block;
+  margin: 0px auto;
+  padding: 16px;
+  width: 40%;
+
+  text-align: center;
+  align-content: center;
+}
+
+.about-vertical-container img {
+  display: block;
+  margin: 0px auto;
+  padding: 16px;
+  width: 75%;
+  max-width: 312px; !important
+
+  text-align: center;
+  align-content: center;
+}
+
+.text-container#about-page {
+  margin: 80px auto;
+}
+
+.text-container#about-page h2, h3, h4 {
+  margin-top: 16px;
+
+  text-align: center;
+  align-content: center;
 }
 
 /* Collapsable Container -----------------------------------------------------*/
