--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -3,28 +3,28 @@
 </div>
 
 <form class="register-form" (submit)="onRegisterSubmit()">
-  <div class="container">
+  <div class="form-element">
     <label class="form-label">Username: </label>
     <input class="form-textbox" type="text" [(ngModel)]="username" name="username">
   </div>
-  <div class="container">
+  <div class="form-element">
     <label class="form-label">Preferred Email: </label>
     <input class="form-textbox" type="text" [(ngModel)]="email" name="email">
   </div>
-  <div class="container">
+  <div class="form-element">
     <label class="form-label">Phone Number (Optional): </label>
     <input class="form-textbox" type="text" [(ngModel)]="sms_number" name="sms_number">
     <p class="form-explanation">This will be used to send you custom alerts, if desired.</p>
   </div>
-  <div class="container">
+  <div class="form-element">
     <label class="form-label">Password: </label>
     <input class="form-textbox" type="password" [(ngModel)]="password" name="password">
   </div>
-  <div class="container">
+  <div class="form-element">
     <label class="form-label">Confirm Passwer: </label>
     <input class="form-textbox" type="password" [(ngModel)]="passwordConf" name="passwordConf">
   </div>
-  <div class="container">
-    <input class="button-dark selectDisable" type="submit">
+  <div class="form-element">
+    <input class="button-dark selectDisable" id="form-button-stretch" type="submit">
   </div>
 </form>
