--- a/frontend/src/assets/css/forms.css
+++ b/frontend/src/assets/css/forms.css
@@ -27,21 +27,30 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.form-label {
-  width: 200px;
-  padding: 16px;
+.form-element {
+  margin: 0 auto;
+  padding: 16px 0;
+  width: 95%;
+}
 
+.form-label {
   color: #151515;
   font-family: "Montserrat", helvetica, sans-serif;
   font-size: 1.2em;
 }
 
 .form-textbox {
-  width: 250px;
-
+  box-sizing: border-box;
+  width: 100%;
   color: #151515;
   font-family: "Montserrat", helvetica, sans-serif;
   font-size: 1.2em;
+}
+
+#form-button-stretch {
+  padding: 16px 0px;
+  margin: 0px;
+  width: 100%;
 }
 
 .form-explanation {
