Add access to about while logged in; Login Bug fixes

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -27,6 +27,7 @@
         <div class="navbar-dropdown-content" id="settingsDropdown">
           <button class="dropbutton selectDisable" [routerLink]="['/settings/account']">Account Settings</button>
           <button class="dropbutton selectDisable" [routerLink]="['/settings/devices']">Device Settings</button>
+          <button class="dropbutton selectDisable" [routerLink]="['/about']">About</button>
           <button class="dropbutton selectDisable" (click)="onLogoutClicked()">Logout</button>
         </div>
       </div>
