--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
     <input class="form-textbox" type="password" [(ngModel)]="password" name="password">
   </div>
   <div class="form-element">
-    <input class="button-dark selectDisable" id="form-button-stretch" type="submit"/>
+    <input class="button-dark selectDisable" id="form-button-stretch" type="submit">
   </div>
   <div class="form-element">
     <label class="form-label small-font">
