--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -1,3 +1,39 @@
-<p>
-  account-settings works!
-</p>
+<div>
+  <h1 class="title">Account Settings</h1>
+</div>
+
+<form class="register-form" (submit)="onUpdateSubmit()">
+
+  <h3>Submit Profile Updates</h3>
+
+  <div class="form-element">
+    <label class="form-label">Preferred Email: </label>
+    <input class="form-textbox" type="text" [(ngModel)]="email" name="email">
+  </div>
+  <div class="form-element">
+    <label class="form-label">Phone Number (Optional): </label>
+    <input class="form-textbox" type="text" [(ngModel)]="sms_number" name="sms_number">
+    <p class="form-explanation">This will be used to send you custom alerts, if desired.</p>
+  </div>
+  <div class="form-element">
+    <input class="button-dark selectDisable" id="form-button-stretch" type="submit">
+  </div>
+
+  <br><br><hr><br><br>
+
+  <h3>Delete Profile</h3>
+
+  <div class="form-element">
+    <button type="button" class="button-dark selectDisable" id="form-button-stretch" (click)="onDeleteSubmit()">Delete Profile</button>
+    <br><br><p class="form-explanation"><strong>WARNING:</strong> This action cannot be undone and permanently deletes all user data.</p>
+  </div>
+</form>
+
+<!-- Delete Account Modal -->
+<div id="deleteModal" class="modal">
+  <div class="modal-content container">
+    <h2>Warning!<br><br>Are you sure you want to do delete your account?<br><br></h2>
+    <button class="button-dark selectDisable" (click)="onCancelDeleteSubmit()">Cancel</button>
+    <button class="button-dark selectDisable" (click)="onConfirmDeleteSubmit()">Confirm</button>
+  </div>
+</div>
