Implement collapsibles in device settings; Bug fixes

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -21,10 +21,12 @@
   </p>
   <div class="about-vertical-container">
     <h3>Github</h3>
-    <img class="selectDisable"
-         id="github-img"
-         src="/assets/img/github.png"
-         alt="Img-Email"/>
+    <a href="https://github.com/MrCerealKiller/homestead-project" target="_blank">
+      <img class="selectDisable"
+           id="github-img"
+           src="/assets/img/github.png"
+           alt="Img-Email"/>
+    </a>
     <p>
       This project is open source and posted on Github. To access, collaborate,
       or report bugs please click on the above image.
@@ -32,10 +34,12 @@
   </div>
   <div class="about-vertical-container right">
     <h3>Email</h3>
-    <img class="selectDisable"
-         id="email-img"
-         src="/assets/img/email.png"
-         alt="Img-Email"/>
+    <a href="mailto:jgomallette@gmail.com">
+      <img class="selectDisable"
+           id="email-img"
+           src="/assets/img/email.png"
+           alt="Img-Email"/>
+    </a>
     <p>
       For direct communication, if absolutely necessary, the administrator can
       be reached at <a href="mailto:jgomallette@gmail.com">this email</a>.
