--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -29,6 +29,9 @@
         <td class="dashboard-table-cell">{{device.lastStatusUpdate}}</td>
         <td class="dashboard-table-cell">{{device.dateLastUpdated}}</td>
       </tr>
+      <tr class="dashboard-table-row">
+        <td class="dashboard-table-cell" colspan="5">Add Device</td>
+      </tr>
     </tbody>
     <!-- Note: Data rows filled dynamically by hp_table.js -->
     <noscript>
