--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -20,6 +20,7 @@
 @import "./assets/css/modals.css";
 @import "./assets/css/flash-messages.css";
 @import "./assets/css/tooltips.css";
+@import "./assets/css/collapsibles.css";
 @import "./assets/css/simple-animations.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300|Share+Tech+Mono');
 
