--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,3 +1,18 @@
-<p>
-  profile works!
-</p>
+<div class="container text-container" id="profile-page">
+  <!-- <h2 [(ngModel)]="username" name="username">Foo Yeah</h2> -->
+  <h1>{{username}}</h1>
+  <div class="about-vertical-container">
+    <img class="selectDisable"
+             id="profile-img"
+             src="/assets/img/account-dark.png"
+             alt="Img-Profile"/>
+  </div>
+  <div class="about-vertical-container right">
+    <h4>Email</h4>
+    <p>{{email}}</p>
+    <br><br>
+    <h4>SMS Number</h4>
+    <p>{{sms_number}}</p>
+  </div>
+  <button class="button-dark" [routerLink]="['/settings/account']">Go to Account Settings</button>
+</div>
