--- a/frontend/src/assets/css/containers.css
+++ b/frontend/src/assets/css/containers.css
@@ -77,3 +77,13 @@
   text-align: center;
   align-content: center;
 }
+
+.text-container#profile-page {
+  margin: 80px auto;
+  max-width: 624px;
+}
+
+.text-container#profile-page p {
+  margin: 0px auto;
+  padding: 0px;
+}
