--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -44,7 +44,7 @@ body {
   background-color: #DCDCDC;
 }
 
-h2, h3, h4 {
+h1, h2, h3, h4 {
   color: #DC143C;
   font-family: "Share Tech Mono", "Courier New", Courier, monospace;
 }
